# EduPlatform

./: docker-compose.yml  init.sql  pyproject.toml
assignments/: urls.py
courses/: urls.py
lessons/: urls.py
quizzes/: urls.py
users/: urls.py
