[tool.poetry]
name = "eduplatform"
version = "0.1.0"
description = "An educational platform for learning Python and AI"
authors = ["Igor Treshchev <kontekst.seo@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
django-allauth = "^0.52.0"
gunicorn = "^20.1.0"
redis = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
